# crave

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  TODO  bootstrap.sh  buildscript  jenkins_run_crave_check.sh  show_gits_summary.sh
crave/dependencies/aiger-20071012/: CMakeLists.txt  setup.sh  shared.sh
crave/dependencies/boolector-2.2.0/: 0014-workaround-on-shifting-conditions.patch  CMakeLists.txt  btorconfig.h.cmake  lingeling_include_path.patch  setup.sh  shared.sh
crave/dependencies/lingeling-ayv-86bf266-140429/: CMakeLists.txt  lglcfg.h.in.cmake  lglcflags.h.in.cmake  setup.sh  shared.sh
crave/dependencies/minisat-2.2.0/: CMakeLists.txt  MiniSatConfig.cmake  MiniSatConfigVersion.cmake  setup.sh  shared.sh
crave/dependencies/picosat-936/: CMakeLists.txt  setup.sh  shared.sh
crave/dependencies/zchaff-2007.3.12/: CMakeLists.txt  missing_includes.patch  setup.sh  shared.sh  zChaffConfig.cmake  zChaffConfigVersion.cmake
crave/examples/: CMakeLists.txt  Makefile.common
crave/examples/crave2_api/: CMakeLists.txt
crave/examples/experimental_api/: CMakeLists.txt
crave/metaSMT/: .appveyor.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  bootstrap.sh
crave/metaSMT/.windows/: Z3Config.cmake
crave/metaSMT/cmake/: build_type.cmake  config_file.cmake  metaSMT.makefile.in  metaSMTConfig.cmake.in
crave/metaSMT/doc/: CMakeLists.txt
crave/metaSMT/src/: CMakeLists.txt
crave/metaSMT/tests/: CMakeLists.txt  boost_test.cpp  direct_Aiger_MiniSAT.cpp  direct_Aiger_PicoSAT.cpp  direct_BitBlast_CUDD.cpp  direct_Boolector.cpp  direct_CUDD.cpp  direct_CUDD_Distributed.cpp  direct_CVC4.cpp  direct_Lingeling.cpp  direct_MiniSAT.cpp  direct_PicoSAT.cpp  direct_STP.cpp  direct_Yices2.cpp  direct_Z3.cpp  search_tests.py  test_Array.cpp  test_QF_BV.cpp  test_QF_UF.cpp  test_SAT.cpp  test_aig.cpp  test_annotate.cpp  test_cardinality.cpp  test_evaluator.cpp  test_result_wrapper.cpp  test_solver.cpp  test_unsat.cpp
crave/src/lib/: CMakeLists.txt  ComplexityEstimationVisitor.cpp  ConstrainedRandom.cpp  ConstrainedRandomInit.cpp  ConstraintManager.cpp  ConstraintPartition.cpp  ConstraintPartitioner.cpp  CraveSettings.cpp  Distribution.cpp  EvalVisitor.cpp  Evaluator.cpp  FixWidthVisitor.cpp  Generator.cpp  GetSupportSetVisitor.cpp  Operators.cpp  RandObjGenerator.cpp  RandomBase.cpp  RandomSeedManager.cpp  ReplaceVisitor.cpp  SettingType.cpp  ToDotNodeVisitor.cpp  VariableSolver.cpp  (+11 more)
crave/tests/: CMakeLists.txt  boost_test.cpp  search_tests.awk  search_tests.py
examples/: CMakeLists.txt
examples/ALU/: ALU12.cpp  ALU16.cpp  ALU24.cpp  ALU32.cpp  ALU4.cpp  CMakeLists.txt
examples/ex2_constr_ref/: main.cpp
examples/ex3_inh_soft_next/: main.cpp
examples/ex6_inline_gen/: main.cpp
examples/ubus/: CMakeLists.txt  dut_dummy.h  sc_main.cpp  test.am  test_lib.h  ubus_example_master_seq_lib.h  ubus_example_scoreboard.cpp  ubus_example_scoreboard.h  ubus_example_tb.h
src/crave/: AllSAT.hpp  AssignResult.hpp  CMakeLists.txt  ConstrainedRandom.cpp  ConstrainedRandom.hpp  ConstrainedRandomGraph.hpp  Constraint.hpp  Context.hpp  Distribution.hpp  ExpressionTraits.hpp  FactoryAssignResult.hpp  Generator.hpp  Generator.hpp.orig  Logger.hpp  RandomBase.hpp  RandomSeedManager.hpp  Settings.hpp  Statement.hpp  SystemC.hpp  TypeConfig.hpp  UserConstraint.hpp  VariableContainer.hpp  VariableGenerator.hpp  VectorConstraint.hpp  VectorGenerator.hpp  bitsize_traits.hpp  mt19937Manager.hpp
src/lib/: AssignResultImpl.hpp  CMakeLists.txt  ComplexityEstimationVisitor.cpp  ConstrainedRandom.cpp  ConstrainedRandomGraph.cpp  ConstrainedRandomInit.cpp  ConstraintManager.cpp  ConstraintPartition.cpp  ConstraintPartitioner.cpp  CraveSettings.cpp  Distribution.cpp  EvalVisitor.cpp  Evaluator.cpp  FixWidthVisitor.cpp  Generator.cpp  GetSupportSetVisitor.cpp  Operators.cpp  RandObjGenerator.cpp  RandomBase.cpp  RandomSeedManager.cpp  ReplaceVisitor.cpp  SettingType.cpp  ToDotNodeVisitor.cpp  UserConstraint.cpp  UserConstraintType.cpp  UserVectorConstraint.cpp  VariableCoverageGenerator.cpp  VariableCoverageSolver.cpp  VariableDefaultSolver.cpp  VariableGeneratorMT.cpp  VariableGeneratorType.cpp  VariableSolver.cpp  VectorGenerator.cpp  metaSMTNodeVisitor.cpp  metaSMTNodeVisitorImpl.hpp  metaSMTNodeVisitorYices2.cpp  mt19937Manager.cpp
tests/: AllSAT.cpp  Boolector.cpp  CMakeCache.txt  CMakeLists.txt  Cudd.cpp  Makefile  Priority.cpp  SWORD.cpp  cmake_install.cmake  compile_commands.json  experimental_tests.cpp  main.cpp  solver_independent_tests.cpp  test_AllSAT.cpp  test_Constraint_Management.cpp  test_Context.cpp  test_CoverageSampling.cpp  test_Distribution.cpp  test_Evaluations.cpp  test_ExperimentalConstraintManagement.cpp  test_ExperimentalContext.cpp  test_ExperimentalDistribution.cpp  test_ExperimentalEvaluations.cpp  test_ExperimentalOperators.cpp  test_ExperimentalRandom_Object.cpp  test_ExperimentalSequenceItem.cpp  test_ExperimentalUserConstraint.cpp  test_ExperimentalVector_Constraint.cpp  test_Inheritence.cpp  test_ObjectHierarchy.cpp  test_Operators.cpp  test_Random_Object.cpp  test_Syntax.cpp  test_SystemC_Data.cpp  test_UserConstraint.cpp  test_Vector_Constraint.cpp  use_Boolector.cpp  use_CVC4.cpp  use_Cudd.cpp  use_Priority.cpp  (+2 more)
tests/core/: solver_independent_tests.cpp  test_Constraint_Management.cpp  test_Context.cpp  test_Distribution.cpp  test_Evaluations.cpp  test_Operators.cpp  test_Random_Object.cpp  test_Syntax.cpp  test_SystemC_Data.cpp  test_UserConstraint.cpp  test_Vector_Constraint.cpp  use_Boolector.cpp  use_Cudd.cpp  use_STP.cpp  use_Yices2.cpp  use_Z3.cpp
tests/experimental/: test_CoverageSampling.cpp  test_ExperimentalConstraintManagement.cpp  test_ExperimentalContext.cpp  test_ExperimentalDistribution.cpp  test_ExperimentalEvaluations.cpp  test_ExperimentalObjectHierarchy.cpp  test_ExperimentalOperators.cpp  test_ExperimentalSequenceItem.cpp  test_ExperimentalUserConstraint.cpp  test_ExperimentalVector_Constraint.cpp
tests/nbproject/: configurations.xml  project.xml
(+511 files in other folders)
